# SantaPick_Backend

./: README.md  pyproject.toml  requirements.txt
app/: main.py  models.py  services.py
app/api/: intermediate.py  products.py  recommendation.py  test.py  user.py
data/graph_data/: entity_list.txt
data/products/: products.csv
data/psychology-question/: 2-choice-question.csv  4-choice-question.csv  5-point-question.csv  O-X-question.csv  concept-question.csv  emotion-concept-relation.csv  trait-question.csv
utils/: config.py  gpt_service.py
utils/engines/: data_loader.py  recommendation_engine.py  scoring_calculator.py
utils/models/: embeddings.pkl  recommendation_graph.pkl
