[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santapick-backend"
version = "1.0.0"
description = "SantaPick Backend API - Personality-based Product Recommendation System"
authors = [
    {name = "SantaPick Team", email = "team@santapick.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pandas==2.1.3",
    "numpy==1.24.3",
    "scikit-learn==1.3.2",
    "networkx==3.2.1",
    "python-dotenv==1.0.0",
    "openai==1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/santapick/santapick-backend"
Repository = "https://github.com/santapick/santapick-backend"
Documentation = "https://github.com/santapick/santapick-backend/blob/main/README.md"
Issues = "https://github.com/santapick/santapick-backend/issues"

[project.scripts]
santapick-server = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "utils*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true